# FinSight

./: .dockerignore  .env.example  .gitignore  FinSight Project.code-workspace  FinSight_Chat_Handoff.md  FinSight_Status_and_Roadmap.md  FinSight_StepByStep_Execution_Checklist.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-image.yml  ci.yml
databricks/: bundle.yml  config.py
databricks/notebooks/: 01_bronze_ingest.py  02_silver_clean.py  02_silver_transform.py  03_gold_load.py  03_gold_star.py
docs/: WELL_ARCHITECTED_REVIEW.md
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
libs/finsight_common/: __init__.py  agent.py  analytics.py  anomaly.py  categorize.py  config.py  embeddings.py  keyvault.py  llm_categorize.py  logging.py  models.py  parsing.py  pii.py  rag.py  vectorstore.py  vision.py  warehouse.py
libs/finsight_common/llm/: __init__.py  azure_openai.py  base.py  bedrock.py  factory.py
libs/finsight_common/ml/: __init__.py  anomaly_model.py  features.py
models/: anomaly_isoforest.joblib
observability/alloy/: config.alloy
observability/grafana/dashboards/: finsight.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: datasource.yml
observability/prometheus/: prometheus.yml
scripts/: deploy_containerapp.ps1  download_kaggle_datasets.py  generate_synthetic_statements.py  provision_azure.ps1  run_alloy.ps1  setup_databricks_secrets.ps1  setup_snowflake.py  smoke_live.ps1  train_anomaly_model.py  verify_bedrock.py  verify_cloud.py
services/: __init__.py
services/digest/: function_app.py  local.settings.json.example  requirements.txt
services/gateway/: Dockerfile  __init__.py  app.py  metrics.py
snowflake/ddl/: star_schema.sql
tests/: conftest.py  test_agent.py  test_analytics.py  test_anomaly.py  test_bedrock.py  test_categorize.py  test_embeddings.py  test_gateway.py  test_llm_categorize.py  test_metrics.py  test_ml_anomaly.py  test_models.py  test_parsing.py  test_pii.py  test_rag.py  test_vectorstore.py  test_warehouse.py
