[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsight"
version = "0.1.0"
description = "FinSight — Personal Finance Statement Analyzer & Anomaly Monitor"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "structlog>=24.1",
]

[project.optional-dependencies]
# Statement parsing + synthetic data generation
data = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pdfplumber>=0.11",
    "reportlab>=4.1",
]
# PII redaction (falls back to regex if not installed)
pii = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]
# Cloud + LLM integrations
ai = [
    "openai>=1.30",
    "azure-identity>=1.16",
    "azure-keyvault-secrets>=4.8",
    "azure-storage-blob>=12.20",
    "pinecone>=5.0",
]
# Snowflake analytics warehouse
snowflake = [
    "snowflake-connector-python>=3.7",
]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools]
package-dir = { "" = "libs" }

[tool.setuptools.packages.find]
where = ["libs"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["databricks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = [".", "libs"]
filterwarnings = ["ignore::DeprecationWarning"]
